# DIT-thesis

./: .gitignore  README-tech.md  README.md
app/: .env.example  docker-compose.yml
app/back/: .dockerignore  Dockerfile  Dockerfile.opt1  Dockerfile.opt2  README-back.md  makecommands.py
app/back/dit-app/: requirements.txt  test.py
app/back/dit-app/interactions/: admin.py  apps.py  constants.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
app/back/dit-app/project/: constants.py  settings.py  urls.py  utils.py
app/back/dit-app/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/front/: .dockerignore  Dockerfile  README-front.md
app/front/dit-app/: constants.py  main.py  requirements.txt  services.py  utils.py
app/front/dit-app/.streamlit/: config.toml
app/front/dit-app/api/: constants.py
app/mobile/: README-mobile.md  pyproject.toml  requirements.txt
app/mobile/dit-app/: Dockerfile  buildozer.spec  main.kv  main.py
app/mobile/dit-app/api/: constants.py  services.py
app/mobile/dit-app/app/: constants.py  services.py  utils.py
app/mobile/dit-app/app/components/: chips.kv  chips.py  divider.kv  divider.py  navigation.kv  navigation.py  switch.kv  switch.py  toolbar.kv  toolbar.py
app/mobile/dit-app/app/views/account/pages/: home.kv  home.py  login.kv  login.py  sign_up.kv  sign_up.py
app/mobile/dit-app/app/views/groups/pages/: invitations.kv  invitations.py  management.kv  management.py
app/ubuntu/: Vagrantfile
resources/diagrams/: OverallArchitecture.drawio  UseCase.drawio
(+29 files in other folders)
